--- a/workers/package.json
+++ b/workers/package.json
@@ -3,19 +3,21 @@
   "engines": {
     "node": "^13.0.0"
   },
-  "version": "0.1.0",
+  "version": "0.1.3",
   "description": "Job server for velocity9.",
   "author": "Aaron Goin",
   "license": "BSD-3-Clause",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c && cp ./src/index.d.ts ./dist/index.d.ts",
+    "build": "npm run prebuild && npm run rawbuild",
+    "rawbuild": "NODE_ENV=development rollup -c && cp ./src/index.d.ts ./dist/index.d.ts",
+    "prebuild": "npm run prettier && npm run lint",
     "dev": "rollup -c -w",
-    "lint": "eslint --fix ./src/index.ts",
+    "lint": "eslint --fix ./src/*",
     "test": "jest",
-    "prettier": "prettier --write",
-    "publish": "npm publish --access public"
+    "prettier": "prettier --write ./src/*",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "ioredis": "^4.17.3"
@@ -39,5 +41,32 @@
     "ts-node": "^7.0.1",
     "tslib": "^1.9.3",
     "typescript": "^3.9.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,css,md,scss}": [
+      "prettier --write",
+      "git add"
+    ],
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "verbose": true,
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.[jt]s?(x)",
+      "**/?(*.)(spec|test).[jt]s?(x)"
+    ]
   }
 }
