--- a/redis/package.json
+++ b/redis/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@velocity9/auth",
+  "name": "@velocity9/redis",
   "engines": {
     "node": "^12.0.0"
   },
   "version": "0.1.3",
-  "description": "Session and authentication middleware for velocity9.",
+  "description": "Redis interfaces for velocity9.",
   "author": "Aaron Goin",
   "license": "BSD-3-Clause",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "npm run prebuild && npm run rawbuild",
     "rawbuild": "NODE_ENV=development rollup -c && cp ./src/index.d.ts ./dist/index.d.ts",
@@ -19,25 +18,32 @@
     "prettier": "prettier --write ./src/*",
     "precommit": "lint-staged"
   },
+  "dependencies": {
+    "ioredis": "^4.17.3"
+  },
   "peerDependencies": {
-    "@velocity9/server": "^0.1.6"
+    "@velocity9/auth": "^0.1.7",
+    "@velocity9/throttle": "^0.1.7",
+    "@velocity9/workers": "^0.1.7"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^4.1.1",
-    "@types/ioredis": "^4.16.4",
+    "@types/ioredis": "^4.16.6",
     "@types/jest": "^23.3.10",
     "@types/node": "^14.0.11",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "@velocity9/server": "^0.1.6",
-    "eslint-config-prettier": "^6.11.0",
+    "@velocity9/auth": "^0.1.7",
+    "@velocity9/throttle": "^0.1.7",
+    "@velocity9/workers": "^0.1.7",
     "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
     "jest": "^23.6.0",
     "lint-staged": "^8.1.0",
     "prettier": "^1.19.1",
+    "rollup": "^2.10.0",
     "rollup-plugin-cleanup": "^3.1.1",
     "rollup-plugin-dts": "^1.4.3",
-    "rollup": "^2.10.0",
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tslib": "^1.9.3",
